--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -1388,25 +1388,6 @@ li.userInList h3{
 #page-lstMyStore .list-info li h3.costProduct,
 #page-lstStore .list-info li h3.costProduct{ color: #A42A00;}
 #page-freeProducts .list-info li h3.date{ font-size: 10px; }
-@media (min-width: 600px){
-	#page-freeProducts .list-info li,
-	#page-lstMyStore .list-info li,
-	#page-lstStore .list-info li{  height: 200px; }
-	#page-freeProducts .list-info li h3,
-	#page-lstMyStore .list-info li h3,
-	#page-lstStore .list-info li h3{ 
-		font-size: 20px; 
-		max-height: 60px;
-	}
-	#page-freeProducts .list-info li h3.date{ font-size: 15px; }
-	#page-freeProducts .list-info li img,
-	#page-lstMyStore .list-info li img,
-	#page-lstStore .list-info li img{ width: 30%; }
-	/*#page-lstStore .list-info{ margin: 45px 0 0; }*/
-	#page-freeProducts .list-wrapper,
-	#page-lstMyStore .list-wrapper,
-	#page-lstStore .list-wrapper{ top: 75px; }
-}
 #page-freeProducts #rowTitle,
 #page-lstMyStore #rowTitle,
 #page-lstStore #rowTitle{
@@ -1624,12 +1605,6 @@ li.userInList h3{
 }
 #page-lstStoreCategory .list-wrapper,
 #page-lstStoreSubCategory .list-wrapper{ top: 68px; }
-@media (min-width: 600px){
-	#page-lstStoreCategory .list-wrapper,
-	#page-lstStoreSubCategory .list-wrapper{ top: 90px; }
-	#infoDetails #idProductContent .photosp img{ width: 350px; }
-	#infoDetails #idProductContent .photosp .vid img{ padding: 40px 140px; }
-}
 #menu .cart .active{
 	font-size: 20px;
 	background-color: #16A085;
@@ -1651,11 +1626,6 @@ li.userInList h3{
 	overflow: hidden;
 	/* white-space: nowrap; */
 	word-wrap: normal;
-}
-@media screen and (min-width: 600px) {
-	#lstStoreOption .contentItem .itemDes .name{
-		width: 500px;
-	}
 }
 #page-myOrders #resultList li,
 #page-lstStoreSubCategory #categotyList li,
@@ -1702,15 +1672,11 @@ li.userInList h3{
 	vertical-align: bottom;
 	font-size: small;
 }
-@media screen and (min-width: 600px) {
-	#page-myOrders #rowTitle .ui-block-a div,
-	#page-myOrders #rowTitle .ui-block-b div{
-		background-size: 40%;
-		width:20%;
-	}
-}
 #page-myOrders .nameProduct{ padding: 0; }
 #page-myOrders .price{ color: #F57133; }
+#cate-dialog{
+
+}
 /*Store Ends*/
 /*Media querys*/
 @media screen and (max-width: 600px) {
@@ -1785,6 +1751,33 @@ li.userInList h3{
 	#sub-menu li.store{
 		background-size: 20%;
 	}
+	#page-freeProducts .list-info li,
+	#page-lstMyStore .list-info li,
+	#page-lstStore .list-info li{  height: 200px; }
+	#page-freeProducts .list-info li h3,
+	#page-lstMyStore .list-info li h3,
+	#page-lstStore .list-info li h3{ 
+		font-size: 20px; 
+		max-height: 60px;
+	}
+	#page-freeProducts .list-info li h3.date{ font-size: 15px; }
+	#page-freeProducts .list-info li img,
+	#page-lstMyStore .list-info li img,
+	#page-lstStore .list-info li img{ width: 30%; }
+	/*#page-lstStore .list-info{ margin: 45px 0 0; }*/
+	#page-freeProducts .list-wrapper,
+	#page-lstMyStore .list-wrapper,
+	#page-lstStore .list-wrapper{ top: 75px; }
+	#page-lstStoreCategory .list-wrapper,
+	#page-lstStoreSubCategory .list-wrapper{ top: 90px; }
+	#infoDetails #idProductContent .photosp img{ width: 350px; }
+	#infoDetails #idProductContent .photosp .vid img{ padding: 40px 140px; }
+	#lstStoreOption .contentItem .itemDes .name{ width: 500px; }
+	#page-myOrders #rowTitle .ui-block-a div,
+	#page-myOrders #rowTitle .ui-block-b div{
+		background-size: 40%;
+		width:20%;
+	}
 }
 
 @media screen and (min-width: 1200px) {
@@ -1798,3 +1791,4 @@ li.userInList h3{
 		background-size: 16%;
 	}
 }
+/*End Media querys*/
