Ahora solo se muestra el panel de hashes si hay alguno creado(NEW TAG APP)

--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -212,6 +212,10 @@
 	width:5px;position:absolute;z-index:200;right:10px;
 }
 
+#privacy-options{
+	margin-top: 1em;
+}
+
 #privacy-options .ui-btn-up-c{
 	background: none;
 	background-image: none;
