dialogs new style 3

--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -9,6 +9,15 @@
 	background: transparent;
 	/*border-radius: 5px;*/
 }
+.myDialog .content span,.myDialog .content a,
+.myDialog .content strong,.myDialog .content li,
+.myDialog .content p,.myDialog .content em,
+.myDialog .content div,
+.myDialog .content button{
+	color: white; 
+	text-decoration: none;
+}
+/*End Cuadros de dialogo*/
 /*Login, Signin*/
 .ui-page .ui-content.smt-bg, .smt-bg{
 	background: #01a185 url('newdesign/bg-buildings.png') no-repeat top;
@@ -1819,10 +1828,6 @@ li.userInList h3{
 	margin: 5px 0 0; 
 	float: left;
 }
-#cate-dialog ul li a,#cate-dialog ul li a:active{
-	text-decoration: none;
-	color: black;	
-}
 #cate-dialog ul.user li.myPubli,
 #cate-dialog ul.user li.myPubli+li,
 #cate-dialog ul.user li.myFP,
@@ -1841,7 +1846,6 @@ li.userInList h3{
 	background-size: 30%;
 	background-repeat: no-repeat;;
 	background-position: center;
-	background-color: black;
 }
 #cate-dialog ul li ul{ display: none; }
 #cate-dialog ul li.active ul{ display: block; }
