Arreglos tags privadas y publicas

--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -16,6 +16,7 @@
 .myDialog .content button{
 	color: white; 
 	text-decoration: none;
+	text-shadow: 0 0 0;
 }
 /*End Cuadros de dialogo*/
 /*Login, Signin*/
