Cambios de los iconos de share y redist
Cambio tambien del cuadro de dialogos de amigos

--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -9,6 +9,10 @@
 	background: transparent;
 	/*border-radius: 5px;*/
 }
+
+#friend-options .info{
+	color: #FFF;
+}
 /*Login, Signin*/
 .ui-page .ui-content.smt-bg, .smt-bg{
 	background: #01a185 url('newdesign/bg-buildings.png') no-repeat top;
@@ -343,10 +347,12 @@
 	background-image:url('newdesign/tag/comments.png?1');
 }
 .tag-container [tag] menu li#share{
-	background-image:url('newdesign/tag/share.png?1');
+	background-image:url('menu/redist.png?1');
+	
 }
 .tag-container [tag] menu li#share:hover{
-	background-image:url('newdesign/tag/share.png?1');
+	background-image:url('menu/redist_over.png?1');
+	
 }
 .tag-container [tag] menu li#report{
 	background-image:url('newdesign/tag/hide.png?1');
@@ -355,11 +361,11 @@
 	background-image:url('newdesign/tag/hide.png?1');
 }
 .tag-container [tag] menu li#redistr{
-	background-image:url('menu/redist.png?1');
+	background-image:url('newdesign/tag/share.png?1');
 }
 .tag-container [tag] menu li#redistr:hover,
 .mobile .tag-container [tag] menu li.expand#redistr{
-	background-image:url('menu/redist_over.png?1');
+	background-image:url('newdesign/tag/share.png?1');
 }
 .tag-container [tag] menu li#sponsors{
 	background-image:url('menu/sponsor.png?1');
