Bugs varios y Cambios en css

--- a/app.old/css/jquery.mobile.custom.css
+++ b/app.old/css/jquery.mobile.custom.css
@@ -104,10 +104,13 @@
 	color:#444;
 	text-shadow:none;
 	border-color:#fc8829;
+	height: 32px;
+	margin-top: -2px;
+	padding-top: 1px;
+	padding-bottom: 0px;
 }
 #private-select .ui-btn-active{
 	/*background:#03A993 url(images/bg_btn_down_1x100.png) 50% 50% repeat-x;*/
-    background: #3db8e1 url('tbum/white_arrow_left.png') no-repeat;
 	color:#444;
 	text-shadow:none;
 	border: none;
