--- a/app.old/css/seemytag.css
+++ b/app.old/css/seemytag.css
@@ -1823,16 +1823,11 @@ input.password-field {
 	padding: 4px 0;
 }
 .ui-btn-up-e,.ui-btn-hover-e {
-	border: 1px solid #3DB5E8;
-	background: #3DB5E8;
+	border: 1px solid #06c5ac;
+	background: #06c5ac;
 	font-weight: bold;
 	color: white;
 	text-shadow: 0 1px 0 #fff;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #3DB5E8 ), to( #3DB5E7 ));
-	background-image: -webkit-linear-gradient( #3DB5E8, #3DB5E7 );
-	background-image: -moz-linear-gradient( #3DB5E8, #3DB5E7 );
-	background-image: -ms-linear-gradient( #3DB5E8, #3DB5E7 );
-	background-image: -o-linear-gradient( #3DB5E8, #3DB5E7 );
-	background-image: linear-gradient( #3DB5E8, #3DB5E7 );
+
 }
 .ui-btn-hover-e:hover{ color: white; }
