Loader en css y estilos

--- a/app.old/css/jquery.mobile.custom.css
+++ b/app.old/css/jquery.mobile.custom.css
@@ -233,7 +233,7 @@
 }
 .ui-btn-up-f, .ui-btn-hover-f{
 	border: none;
-	background: #3db8e1;
+	background: #03A993;
 	color: #FFF;
 	font-weight: bold;
 }
@@ -248,5 +248,5 @@
 	background-color: #ee6323;
 }
 .btn-blue{
-	background-color:#3db8e1;
+	background-color:#03A993;
 }
