--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -202,7 +202,7 @@ page.unlogged #joinus #text,#keepscroll #text{
 	text-align:left;
 }
 page.unlogged #joinus #text span{
-	color:#3ABBE5;
+	color:#2f4154;
 }
 page.unlogged #keepscroll #text span{
 	color:#f0516c;
