--- a/app/css/jquery.mobile.custom.css
+++ b/app/css/jquery.mobile.custom.css
@@ -112,7 +112,7 @@
 }
 #private-select .ui-btn-active{
 	/*background:#03A993 url(images/bg_btn_down_1x100.png) 50% 50% repeat-x;*/
-    background: #3db8e1 url('tbum/white_arrow_left.png') no-repeat;
+    background: #03A993 url('tbum/white_arrow_left.png') no-repeat;
 	color:#444;
 	text-shadow:none;
 	border: none;
@@ -235,7 +235,7 @@
 }
 .ui-btn-up-f, .ui-btn-hover-f{
 	border: none;
-	background: #3db8e1;
+	background: #03A993;
 	color: #FFF;
 	font-weight: bold;
 }
@@ -250,5 +250,5 @@
 	background-color: #ee6323;
 }
 .btn-blue{
-	background-color:#3db8e1;
+	background-color:#03A993;
 }
