--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -33,7 +33,10 @@
 }
 .myDialog .buttons .ui-btn .ui-btn-text{ font-size: 20px; }
 /*End Cuadros de dialogo*/
-
+.ui-loader{ 
+	top: inherit;
+	bottom: 0;
+}
 /*Login, Signin*/
 .ui-page .ui-content.smt-bg, .smt-bg{
 	background: #01a185 url('newdesign/bg-buildings.png') no-repeat top;
@@ -1812,11 +1815,6 @@ li.userInList h3{
 	/* white-space: nowrap; */
 	word-wrap: normal;
 }
-/*#page-lstStoreOption.shipping #fs-wrapper, 
-#page-lstStoreOption.shipping #scroller, 
-#page-lstStoreOption.shipping #frmRegister{
-	border: none;
-}*/
 #page-lstStoreOption.shipping #storeOption{
 	margin: 0;
 	padding: 0;
@@ -1829,24 +1827,17 @@ li.userInList h3{
 	width: 70%;
 	margin: 0 auto;
 }
-#page-lstStoreOption.shipping #storeOption form textarea{
-/*#page-lstStoreOption.shipping #storeOption form select{*/
-	background-color: #FFF;
-	color: #e2e6e7;
-	border: none;
-	margin: 0;
-	font-size: 16px;
-	resize: none;
-}
 #page-lstStoreOption.shipping #storeOption form .ui-btn-up-c,
 #page-lstStoreOption.shipping #storeOption form .ui-btn-active,
 #page-lstStoreOption.shipping #storeOption form .ui-focus,
+#page-lstStoreOption.shipping #storeOption form .ui-btn-hover,
+#page-lstStoreOption.shipping #storeOption form .ui-btn-down-c,
 #page-lstStoreOption.shipping #storeOption form .ui-select,
 #page-lstStoreOption.shipping #storeOption form .ui-input-text{
-	color: #e2e6e7 !important;
-	margin: 3px;
+	color: #2C3E50 !important;
+	margin: 3px 0;
 	padding: 0;
-	box-shadow: 0 0 0 !important;
+	box-shadow: initial !important;
 	border: none !important;
 	border-radius: 5px !important;
 	-ms-border-radius: 5px !important;
@@ -1862,13 +1853,23 @@ li.userInList h3{
 	text-align: left;
 	padding-left: 5px;
 }
-#page-lstStoreOption.shipping #storeOption form .ui-btn-up-c.short,
-#page-lstStoreOption.shipping #storeOption form .ui-btn-active.short,
-#page-lstStoreOption.shipping #storeOption form .ui-focus.short,
-#page-lstStoreOption.shipping #storeOption form .ui-select.short,
-#page-lstStoreOption.shipping #storeOption form .ui-input-text.short{
-	width: 50%;
+#page-lstStoreOption.shipping #storeOption form .ui-grid-a .ui-btn-up-c,
+#page-lstStoreOption.shipping #storeOption form .ui-grid-a .ui-btn-active,
+#page-lstStoreOption.shipping #storeOption form .ui-grid-a .ui-select .ui-focus,
+#page-lstStoreOption.shipping #storeOption form .ui-grid-a .ui-select{
+	width: 90%;
 }
+#page-lstStoreOption.shipping #storeOption form .ui-grid-a{ width: 103%; }
+#page-lstStoreOption.shipping #storeOption form .ui-grid-a .ui-block-a{ 
+	width: 25%; 
+	margin-right: 2%; 
+}
+#page-lstStoreOption.shipping #storeOption form .ui-grid-a .ui-block-b{ 
+	width: 70%;
+}
+#page-lstStoreOption.shipping #storeOption form .ui-grid-a .ui-select .ui-focus,
+#page-lstStoreOption.shipping #storeOption form .ui-btn-active,
+#page-lstStoreOption.shipping #storeOption form .ui-btn-up-c{ padding: 0; }
 #page-lstStoreOption.shipping #storeOption form .ui-icon-arrow-d{
 	display: none;
 	margin:0;
@@ -1876,9 +1877,21 @@ li.userInList h3{
 	width: 0;
 	height: 0;
 }
-#page-lstStoreOption.shipping #storeOption form input,
-#page-lstStoreOption.shipping #storeOption form .ui-btn-inner{ 
+#page-lstStoreOption.shipping #storeOption .iconButtons{
+	width: 50%;
+	margin: 0 auto;
+	text-align: center;
+}
+#page-lstStoreOption.shipping #storeOption .iconButtons img{
+	width: 30px;
+	height: 30px;
+}
+#page-lstStoreOption.shipping #storeOption .iconButtons a{ color: hsla(210, 26%, 30%, 0.8);}
+#page-lstStoreOption.shipping #storeOption form input.ui-input-text{
 	padding: 5px 0;
+}
+#page-lstStoreOption.shipping #storeOption form .ui-btn-inner{ 
+	padding: 7px 0 8px;
 }
 #page-myOrders #resultList li,
 #page-lstStoreSubCategory #categotyList li,
