--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -930,6 +930,11 @@ li.userInList h3{
 }
 /*SignUp Ends*/
 
+/*TagList Starts*/
+
+
+/*SignUp Ends*/
+
 /*New Tag*/
 #page-newTag .fs-wrapper{
 	padding: 0;
