TagList Nuevo Formato
Destino del boton de profile/tags listo con el nuevo formato

--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -932,6 +932,17 @@ li.userInList h3{
 
 /*TagList Starts*/
 
+#page-tagsList #scroller{
+	background-color: #e2e6e7 !important;
+}
+
+#page-tagsList pd-wrapper{
+	background-color: #e2e6e7 !important;
+}
+#page-tagsList .ui-content{
+	margin-top: 113px;
+	background-color: #e2e6e7 !important;
+}
 
 /*SignUp Ends*/
 
