--- a/web_root/css/seemytag.css
+++ b/web_root/css/seemytag.css
@@ -209,10 +209,9 @@ page.unlogged #keepscroll #text span{
 }
 page>header logo{
 	float:left;
-	margin:5px 10px;
-	background-size:auto 80%;
-	width:130px;
-	height:50px;
+	margin:-25px 0px;
+	background-size:auto 52%;
+
 }
 page>header div.loader{
 	width:28px;
@@ -442,25 +441,17 @@ img.preload.done{
 }
 
 logo{
-	display:inline-block;
-	background:url(tbum/logo-white.png) no-repeat 50%;
-	background-repeat:no-repeat;
-	background-size:100% 100%;
-	width:268px;
-	height:107px;
+	  display: inline-block;
+	  background: url(tbum/logo-white.png) no-repeat 50%;
+	  
+	  width: 176px;
+	  height: 110px
 }
 page.unlogged logo{
 	background-image:url(tbum/logo-white-orange.png);
-	width:170px;
-	height:57px;
+
 }
-page.unlogged>header logo{
-	background-size:140px 45px;
-	background-position:center center;
-	width:180px;
-	height:60px;
-	margin:0;
-}
+
 
 .ui-box-outline{
 	background:#fff;
