--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -540,6 +540,7 @@ input.ui-input-text, textarea.ui-input-text{
 	color: #384e63;
 	font-size: small;
 	line-height: 7.8em;
+	display: block;
 }
 #sub-menu li.timeline{
 	background: #b3b9bd url('newdesign/submenu/timeline.png') no-repeat center 4px;
@@ -760,6 +761,8 @@ li.userInList h3{
 	font-weight: normal;
 	line-height: 7.5em;
 	text-align: center;
+	width: 100%;
+	display: block;
 }
 
 /* SignUp */
