Cambio en el textbox de Tags
Cambio para que no hacer el wrap del texto e incremente el tamanio del
boton

--- a/app/css/newV2.css
+++ b/app/css/newV2.css
@@ -987,6 +987,8 @@ li.userInList h3{
 
 #page-profile .textbox{
 	height: 25px !important;
+	width: 78px !important;
+	max-width: 78px !important;
 	line-height: 25px !important;
 	font-size: 18px !important;
 	float: left;
